--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ classifiers = [
   "Topic :: Security",
 ]
 description = "EPSS API Python Client"
-documentation = "https://kannkyo.github.io/epss-api/html/"
+documentation = "https://github.com/kannkyo/epss-api"
 homepage = "https://github.com/kannkyo/epss-api"
 include = ["sbom.xml"]
 keywords = ["EPSS", "security", "vulnerability"]
