--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -10,11 +10,6 @@ on:
 
 permissions: read-all
 
-# Allow one concurrent test because of NVD API interval limitation
-concurrency:
-  group: "ci"
-  cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,11 +34,11 @@ jobs:
 
       - name: Lint python code by flake8
         continue-on-error: true
-        run: poetry run flake8 src/ tests/ --exclude=src/nvd_api/low_api --format junit-xml --output-file report.xml
+        run: poetry run flake8 src/ tests/ --format junit-xml --output-file report.xml
 
       - name: Lint python code by flake8
         continue-on-error: true
-        run: poetry run flake8 src/ tests/ --exclude=src/nvd_api/low_api --format html --htmldir=flake8
+        run: poetry run flake8 src/ tests/ --format html --htmldir=flake8
 
       - name: Publish flake8 report to PR
         uses: EnricoMi/publish-unit-test-result-action@26dda2fabf18a9c6329223e653166444edbb7e78
@@ -59,8 +54,6 @@ jobs:
 
       - name: Test python code by pytest
         continue-on-error: true
-        env:
-          NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
         run: poetry run pytest
 
       - name: Publish pytest report to PR
