--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,9 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    allow:
+      - dependency-name: "*"
+        dependency-type: "production"
 
   - package-ecosystem: "github-actions"
     directory: "/"
