fix: with format 'owner/repository/' or './' for local workflows

--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -12,4 +12,4 @@ permissions: read-all
 
 jobs:
   Reuse:
-    uses: ./boilerplate-language/boilerplate-python/.github/workflows/scorecards.yml@main
+    uses: boilerplate-language/boilerplate-base/.github/workflows/scorecards.yml@main
