--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -11,5 +11,8 @@ on:
 permissions: read-all
 
 jobs:
+  permissions:
+    security-events: write
+    id-token: write # Used to receive a badge. (Upcoming feature)
   Reuse:
     uses: boilerplate-language/boilerplate-base/.github/workflows/scorecards.yml@main
