--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,8 @@ version = "1.1.1"
 python = "^3.8"
 urllib3 = "^1.26.13"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 autopep8 = "^1.6.0"
-cyclonedx-bom = "^3.11.0"
 flake8 = "^4.0.1"
 flake8-formatter-junit-xml = "^0.0.6"
 flake8-html = "^0.4.3"
@@ -30,25 +29,12 @@ pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 pytest-html = "^3.2.0"
 recommonmark = "^0.7.1"
-sphinx = "^6.1.3"
-sphinx-markdown-tables = "^0.0.17"
-sphinx-rtd-theme = "^1.2.0"
+seman = "^0.1.3"
 toml = "^0.10.2"
-
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.21.1"
-pytest-randomly = "^3.12.0"
-twine = "^4.0.2"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core"]
-
-[tool.poetry.scripts]
-push = "tools.push:main"
-release = "tools.release:main"
-sbom = "tools.sbom:main"
-sphinx = "tools.sphinx:main"
 
 [tool.pytest.ini_options]
 addopts = [
