--- a/.github/actions/python-setup/action.yml
+++ b/.github/actions/python-setup/action.yml
@@ -19,7 +19,30 @@ runs:
       with:
         python-version: ${{ inputs.python-version }}
 
-    - name: Make poetry environment
-      run: |
-        pip install poetry
-        poetry install
+    - name: Setup poetry environment
+      shell: bash
+      run: pip install poetry
+
+    - name: Install dependencies
+      shell: bash
+      run: poetry install
+
+    # - name: Setup poetry environment
+    #   uses: snok/install-poetry@2bf112a0f6979928eb6b011f39700db589c5961e
+    #   with:
+    #     version: ${{ inputs.poetry-version }}
+    #     virtualenvs-create: true
+    #     virtualenvs-in-project: true
+    #     installer-parallel: true
+
+    # - name: Cache dependencies
+    #   uses: actions/cache@c3f1317a9e7b1ef106c153ac8c0f00fed3ddbc0d
+    #   id: poetry_cache_id
+    #   with:
+    #     path: .venv
+    #     key: venv-${{ runner.os }}-${{ inputs.python-version }}-${{ inputs.poetry-version }}-${{ hashFiles('**/poetry.lock') }}
+
+    # - name: Install dependencies
+    #   if: steps.poetry_cache_id.outputs.cache-hit != 'true'
+    #   shell: bash
+    #   run: poetry install
