--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ version = "1.2.0"
 [tool.poetry.dependencies]
 python = "^3.8"
 urllib3 = ">=1.26.13,<3.0.0"
+seman = "^0.1.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^4.0.1"
