--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -56,7 +56,7 @@ jobs:
           password: ${{ secrets.PYPI_API_TOKEN }}
 
       - name: attest build provenance
-        uses: actions/attest-build-provenance@v2
+        uses: actions/attest-build-provenance@7668571508540a607bdfd90a87a560489fe372eb
         with:
           subject-path: |
             dist/${{ steps.build.outputs.package_tar }}
