update ci config

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Test python code by pytest
         continue-on-error: true
-        run: poetry run pytest --cov -o junit_family=legacy
+        run: poetry run pytest
 
       - name: Publish pytest report to PR
         uses: EnricoMi/publish-unit-test-result-action@170bf24d20d201b842d7a52403b73ed297e6645b
