--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,6 +11,7 @@ permissions: read-all
 
 jobs:
   release:
+    needs: [python-ci]
     runs-on: ubuntu-latest
     if: ${{ github.ref_name != 'main' }}
     permissions:
